src/query/snapshots/ecsdb__query__ir__test__filter_expression_sql_query@None.sql_query().snap
---
source: src/query/ir.rs
description: None.sql_query()
---
SqlFragment<ecsdb::query::ir::Select> {
    sql: "select distinct entity from components where true",
    placeholders: [],
}
