src/query/snapshots/ecsdb__query__ir__test__filter_expression_sql_query@Or([And([EntityId(42), WithComponent("ecsdb::Test")]), And([EntityId(23), WithComponent("ecsdb::Foo"), WithoutComponent("ecsdb::Bar")])]).simplify().sql_query().snap
---
source: src/query/ir.rs
description: "Or([And([EntityId(42), WithComponent(\"ecsdb::Test\")]), And([EntityId(23), WithComponent(\"ecsdb::Foo\"), WithoutComponent(\"ecsdb::Bar\")])]).simplify().sql_query()"
---
SqlFragment<ecsdb::query::ir::Select> {
    sql: "select distinct entity from components where ((entity = :1 and exists (select true from components c2 where c2.entity = components.entity and c2.component = :2)) or (entity = :3 and exists (select true from components c2 where c2.entity = components.entity and c2.component = :4) and not exists (select true from components c2 where c2.entity = components.entity and c2.component = :5)))",
    placeholders: [
        (
            ":1",
            Integer(
                42,
            ),
        ),
        (
            ":2",
            Text(
                "ecsdb::Test",
            ),
        ),
        (
            ":3",
            Integer(
                23,
            ),
        ),
        (
            ":4",
            Text(
                "ecsdb::Foo",
            ),
        ),
        (
            ":5",
            Text(
                "ecsdb::Bar",
            ),
        ),
    ],
}
