src/query/snapshots/ecsdb__query__ir__test__filter_expression_sql_query@Or([And([EntityId(42), WithComponent("ecsdb::Test")]), And([EntityId(23), WithComponent("ecsdb::Foo"), WithoutComponent("ecsdb::Bar")])]).sql_query().snap
---
source: src/query/ir.rs
description: "Or([And([EntityId(42), WithComponent(\"ecsdb::Test\")]), And([EntityId(23), WithComponent(\"ecsdb::Foo\"), WithoutComponent(\"ecsdb::Bar\")])]).sql_query()"
---
SqlFragment<ecsdb::query::ir::Select> {
    sql: "select distinct entity from components where ((entity = :1 and entity in (select entity from components where component = :2)) or (entity = :3 and entity in (select entity from components where component = :4) and entity not in (select entity from components where component = :5)))",
    placeholders: [
        (
            ":1",
            <dyn ToSql>,
        ),
        (
            ":2",
            <dyn ToSql>,
        ),
        (
            ":3",
            <dyn ToSql>,
        ),
        (
            ":4",
            <dyn ToSql>,
        ),
        (
            ":5",
            <dyn ToSql>,
        ),
    ],
}
