src/query/snapshots/ecsdb__query__ir__test__filter_expression_sql_query@Or([WithComponent("ecsdb::Foo"), WithoutComponent("ecsdb::Bar")]).simplify().sql_query().snap
---
source: src/query/ir.rs
description: "Or([WithComponent(\"ecsdb::Foo\"), WithoutComponent(\"ecsdb::Bar\")]).simplify().sql_query()"
---
SqlFragment<ecsdb::query::ir::Select> {
    sql: "select distinct entity from components where ((select true from components c2 where c2.entity = components.entity and c2.component = :1) or (select true from components c2 where c2.entity = components.entity and c2.component = :2) is null)",
    placeholders: [
        (
            ":1",
            Text(
                "ecsdb::Foo",
            ),
        ),
        (
            ":2",
            Text(
                "ecsdb::Bar",
            ),
        ),
    ],
}
